--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,19 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+nav {
+  display: flex;
+  width: 40%;
+  justify-content: space-between;
+  margin: 3% 2%;
+  font-size: 150%;
+}
+@media (max-width:500px) {
+  nav {
+    width: 90%;
+    margin-bottom: 0%;
+  }
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -178,6 +191,31 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width:500px) {
+  .home header {
+    flex-direction: column;
+  }
+  .home header h1 {
+    margin-top: 2%;
+  }
+}
+.home .content-top {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home .content-top img {
+  margin-bottom: 2%;
 }
 .home .content-section {
   margin: 30px 0;
@@ -195,6 +233,26 @@ img {
 }
 .home .content-section .img-content img {
   border-radius: 10px;
+}
+@media (max-width:500px) {
+  .home .content-section {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 100%;
+  }
+  .home .content-section .img-content {
+    width: 100%;
+    order: 2;
+    padding-left: 0;
+    display: flex;
+    align-items: stretch;
+    justify-content: flex-start;
+  }
+  .home .content-section .text-content {
+    width: 100%;
+    order: 1;
+    padding-left: 0;
+  }
 }
 .home .inverse-content {
   padding-bottom: 30px;
@@ -220,8 +278,32 @@ img {
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
+  border: solid red;
 }
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+  border: solid blue;
+}
+.home .content-pick .destination .btn {
+  color: white;
+  background-color: #17A2B8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  font-size: large;
+  height: 40px;
+  width: 90%;
+}
+@media (max-width:500px) {
+  .home .content-pick .content-pick {
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+  }
+  .home .content-pick .destination {
+    width: 100%;
+    margin-bottom: 2%;
+  }
 }
