--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,15 @@
 // Navigation Styles here
+
+nav {
+
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
+    margin: 3% 2%;
+    font-size: 150%;
+
+    @media @mobile {
+        width:90%;
+        margin-bottom: 0%;
+    }
+}
