--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,6 +1,6 @@
 // Mixins in here
 
-.buttton-standard ( @bh, @bw){
+.button-standard ( @bh, @bw){
     color: white;
     background-color: @button-bg;
     display: flex;
